# mcp-discord-chat

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
src/mcp_discord_chat/: server.py
